fix: types for subjects
